// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding team users able to add team members 1`] = `
Object {
  "data": Object {
    "addTeamUser": Object {
      "users": Array [
        Object {
          "email": "rowan@atkinson.com",
          "name": "Rowan Atkinson",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "felicity@atkinson.com",
          "name": "Felicity Atkinson",
          "tz": "America/Los_Angeles",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Adding team users unable to add team member with existing email 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"addTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"email\\":\\"Email is taken\\"}}}}],\\"data\\":{\\"addTeamUser\\":null}}"`;

exports[`Adding team users unable to add team member with missing fields 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"addTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"name\\":\\"Name must be at least 1 characters\\",\\"email\\":\\"Email must be a valid email\\"}}}}],\\"data\\":{\\"addTeamUser\\":null}}"`;

exports[`Fetching team is able to fetch cultureValues 1`] = `
Object {
  "data": Object {
    "team": Object {
      "cultureValues": Array [
        Object {
          "name": "Teamwork",
        },
      ],
      "name": "Chinese Ancient",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Fetching team is able to fetch own team 1`] = `
Object {
  "data": Object {
    "team": Object {
      "id": Any<String>,
      "name": "Chinese Ancient",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Listing team users able to get only own team users 1`] = `
Object {
  "data": Object {
    "team": Object {
      "name": "Gladiators",
      "users": Array [
        Object {
          "email": "russell@crowe.com",
          "name": "Russell Crowe",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "maxwell@crowe.com",
          "name": "Maxwell Crowe",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "shannon@crowe.com",
          "name": "Shannon Crowe",
          "tz": "America/Los_Angeles",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Removing team users able to remove team members 1`] = `
Object {
  "data": Object {
    "removeTeamUser": Object {
      "name": "Despicable Me",
      "users": Array [
        Object {
          "email": "gru@evilson.com",
          "name": "Gru Evilson",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Removing team users not able to remove oneself from own team 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"removeTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"auth\\":\\"You are not authorized to perform this action\\"}}}}],\\"data\\":{\\"removeTeamUser\\":null}}"`;

exports[`Removing team users not able to remove other team's members 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"removeTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"auth\\":\\"You are not authorized to perform this action\\"}}}}],\\"data\\":{\\"removeTeamUser\\":null}}"`;

exports[`Updating team is able to update own team 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "id": Any<String>,
      "name": "Shadow forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team is able to update team emoji 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "emoji": "🌮",
      "id": Any<String>,
      "name": "Bamboo Forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team is able to update team features 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "id": Any<String>,
      "moods": false,
      "recognition": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team is not able to update not own team 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"updateTeam\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"auth\\":\\"You are not authorized to perform this action\\"}}}}],\\"data\\":null}"`;

exports[`Updating team managing team cultureValues is able to add team cultureValues 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "cultureValues": Array [
        Object {
          "name": "Teamwork",
        },
        Object {
          "name": "Efficiency",
        },
      ],
      "name": "Bamboo Forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team managing team cultureValues is able to remove all team cultureValues 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "cultureValues": Array [],
      "name": "Bamboo Forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team managing team cultureValues is able to remove team cultureValues 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "cultureValues": Array [
        Object {
          "name": "Teamwork",
        },
      ],
      "name": "Bamboo Forest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team users able to update own team members 1`] = `
Object {
  "data": Object {
    "updateTeamUser": Object {
      "name": "Allen Key",
      "tz": "Australia/Sydney",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team users not able to update not own team members 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"updateTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"auth\\":\\"You are not authorized to perform this action\\"}}}}],\\"data\\":{\\"updateTeamUser\\":null}}"`;

exports[`Updating team users not able to update with invalid timezone 1`] = `"{\\"http\\":{\\"headers\\":{}},\\"errors\\":[{\\"message\\":\\"ValidationError\\",\\"locations\\":[{\\"line\\":3,\\"column\\":7}],\\"path\\":[\\"updateTeamUser\\"],\\"extensions\\":{\\"code\\":\\"BAD_USER_INPUT\\",\\"exception\\":{\\"errors\\":{\\"tz\\":\\"Timezone is not valid\\"}}}}],\\"data\\":{\\"updateTeamUser\\":null}}"`;
